tests/cases/exhaustiveness/open_ranges.hash
// run=fail, warnings=compare, stage=typecheck

match_int := (value: i32) -> i32 => {
    match value {
        .. => 0,
        _ => 1 // ~WARNING: unreachable pattern
    }
}

match_int := (value: i32) -> i32 => {
    match value {
        ..< => 0, // ~ERROR: pattern `i32::MAX` not covered
    }
}


match_int2 := (value: i32) -> i32 => {
    match value {
        5.. => 0,
        ..4 => 1,
        _ => 2 // ~WARNING: unreachable pattern
    }
}

match_char := (value: char) -> i32 => {
    match value {
        'a'.. => 0,
        'c'..< => 1, // ~WARNING: unreachable pattern
    }
}
